    XmlWriter::print*Element().  Putting this function in XmlWriter
    instead of the CIM* classes keeps those internal methods out of
    the published client and provider APIs.

42. (Roger Kumpf - HP) 15 May 2002 - Moved CIM*::toMof() methods to
    a new MofWriter class as MofWriter::append*Element().  Moved
    CIM*::printMof() methods to MofWriter::print*Element().

43. (Nag Boranna - HP) 16 May 2002 - HP-Nag: Implemented SSL handling in 
    CIMClient.cpp for local connection and modified the CLIs to not to pass 
    SSLContext to the client api. 

44. (Roger Kumpf - HP) 16 May 2002 - Reworked the Array template so that
    each array has its own ArrayRep copy rather than Arrays sharing
    ArrayReps and reference counting.

45. (Nag Boranna - HP) 17 May 2002 - HP-Nag: Moved SSLContext class out of
    TLS files, created SSLContextRep to hide members from the users of 
    SSLContext. Also included CertificateInfo in SSLContext files and 
    removed the CertificateInfo files, so that the client SDK can only
    need to include SSLContext.h for the client apps to use.

46. (Sushma Fernandes - HP) 17 May 2002 - Fixed the CIMInstanceRep::resolve
    method to return the correct class origin. Fixed SecurityPropertyOwner to 
    disallow passwordFilePath="". 

47. (Nag Boranna - HP) 20 May 2002 - HP-Nag: Modified CIM Server and Client
    API to lookup port number from services. CIM Server uses default port
    number (5988 for HTTP or 5989 for HTTPS) if no port number is configured 
    and no port is specified in the configuration file. CIMClient's connectLocal()
    method is modified to try and connect to HTTP port, if failed then try and
    connect to HTTPS port.

48. (Sushma Fernandes - HP) 21 May 2002: Fixed a problem in repository related
    to rollback failure. 

49. (MM) 23 May 2002 - Added ProviderAdapter support
    The ProviderAdapterManager loads an additional Adapter library in 