@@ -117,6 +117,8 @@ static struct OwnerEntry _properties[] =
     {"severity",            (ConfigPropertyOwner* )ConfigManager::logOwner},
     {"httpPort",            (ConfigPropertyOwner* )ConfigManager::defaultOwner},
     {"httpsPort",           (ConfigPropertyOwner* )ConfigManager::defaultOwner},
+    {"enableHttpConnection", (ConfigPropertyOwner* )ConfigManager::defaultOwner},
+    {"enableHttpsConnection",(ConfigPropertyOwner* )ConfigManager::defaultOwner},
     {"home",                (ConfigPropertyOwner* )ConfigManager::defaultOwner},
     {"daemon",              (ConfigPropertyOwner* )ConfigManager::defaultOwner},
     {"install",             (ConfigPropertyOwner* )ConfigManager::defaultOwner},
@@ -124,15 +126,15 @@ static struct OwnerEntry _properties[] =
     {"slp",                 (ConfigPropertyOwner* )ConfigManager::defaultOwner},
     {"SSL",                 (ConfigPropertyOwner* )ConfigManager::defaultOwner},
     {"tempLocalAuthDir",    (ConfigPropertyOwner* )ConfigManager::defaultOwner},
-    {"requireAuthentication", (ConfigPropertyOwner* )ConfigManager::securityOwner},
-    {"requireAuthorization",  (ConfigPropertyOwner* )ConfigManager::securityOwner},
+    {"enableAuthentication", (ConfigPropertyOwner* )ConfigManager::securityOwner},
+    {"enableNamespaceAuthorization", (ConfigPropertyOwner* )ConfigManager::securityOwner},
     {"httpAuthType",        (ConfigPropertyOwner* )ConfigManager::securityOwner},
     {"passwordFilePath",    (ConfigPropertyOwner* )ConfigManager::securityOwner},
     {"repositoryIsDefaultInstanceProvider", (ConfigPropertyOwner* )ConfigManager::repositoryOwner},
     {"shutdownTimeout",     (ConfigPropertyOwner* )ConfigManager::shutdownOwner},
-    {"repositoryDir",              (ConfigPropertyOwner* )ConfigManager::fileSystemOwner},
+    {"repositoryDir",       (ConfigPropertyOwner* )ConfigManager::fileSystemOwner},
     {"providerDir",         (ConfigPropertyOwner* )ConfigManager::fileSystemOwner},
-    {"consumerDir",          (ConfigPropertyOwner* )ConfigManager::fileSystemOwner},
+    {"consumerDir",         (ConfigPropertyOwner* )ConfigManager::fileSystemOwner},
     {"enableRemotePrivilegedUserAccess", (ConfigPropertyOwner* )ConfigManager::securityOwner},
 };
 
