@@ -54,6 +54,8 @@ static struct ConfigPropertyRow properties[] =
 {
     {"httpPort", "5988", 0, 0, 0},
     {"httpsPort", "5989", 0, 0, 0},
+    {"enableHttpConnection", "true", 0, 0, 0},
+    {"enableHttpsConnection", "false", 0, 0, 0},
     {"home", "./", 0, 0, 0},
     {"daemon", "false", 0, 0, 0},
     {"install", "false", 0, 0, 0},
